--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,6 +1,6 @@
 ROM nextcloud:12.0.4
 COPY heroku-entrypoint.sh /heroku-entrypoint.sh
-COPY ./ports.conf /etc/apache2/ports.conf
-COPY ./apache.conf /etc/apache2/sites-enabled/000-default.cong
+COPY ports.conf /etc/apache2/ports.conf
+COPY apache.conf /etc/apache2/sites-enabled/000-default.cong
 ENTRYPOINT ["/heroku-entrypoint.sh"]
 CMD ["apache2-foreground"]
